scripts/old/install/log.txt

f@f:~/sw/ld-r$ sudo npm run dev

> linked-data-reactor@0.5.3 dev /home/f/sw/ld-r
> node ./webpack/dev-server.js

/home/f/sw/ld-r/webpack/dev-server.js:1
(function (exports, require, module, __filename, __dirname) { let WebpackDevServer = require ('webpack-dev-server');
                                                              ^^^

SyntaxError: Block-scoped declarations (let, const, function, class) not yet supported outside strict mode
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:374:25)
    at Object.Module._extensions..js (module.js:417:10)
    at Module.load (module.js:344:32)
    at Function.Module._load (module.js:301:12)
    at Function.Module.runMain (module.js:442:10)
    at startup (node.js:136:18)
    at node.js:966:3

npm ERR! Linux 4.4.0-31-generic
npm ERR! argv "/usr/bin/nodejs" "/usr/local/bin/npm" "run" "dev"
npm ERR! node v4.2.6
npm ERR! npm  v3.10.8
npm ERR! code ELIFECYCLE
npm ERR! linked-data-reactor@0.5.3 dev: `node ./webpack/dev-server.js`
npm ERR! Exit status 1
npm ERR!
npm ERR! Failed at the linked-data-reactor@0.5.3 dev script 'node ./webpack/dev-server.js'.
npm ERR! Make sure you have the latest version of node.js and npm installed.
npm ERR! If you do, this is most likely a problem with the linked-data-reactor package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     node ./webpack/dev-server.js
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs linked-data-reactor
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls linked-data-reactor
npm ERR! There is likely additional logging output above.

npm ERR! Please include the following file with any support request:
npm ERR!     /home/f/sw/ld-r/npm-debug.log